# cuartel

./: .gitignore  ARCHITECTURE_REFACTOR.md  ARCHITECTURE_REFACTOR_V2.md  Cargo.toml  DEBUGGING_NOTES.md  Info.plist  KNOWLEDGE_BASE.md  SPEC.md  entitlements.plist
crates/cuartel-acp/: Cargo.toml
crates/cuartel-acp/src/: client.rs  client_handler.rs  error.rs  lib.rs  normalize.rs  sandbox.rs  session.rs  transport.rs
crates/cuartel-acp/tests/: live_claude_code_acp.rs  no_hang_regression.rs
crates/cuartel-app/: Cargo.toml
crates/cuartel-app/src/: app.rs  assets.rs  diff_view.rs  logging.rs  main.rs  onboarding_view.rs  permission_prompt.rs  ports_panel.rs  server_registry_host.rs  session_host.rs  settings_view.rs  sidebar.rs  sidebar_visuals.rs  sidecar_host.rs  tab_bar.rs  theme.rs  timeline_view.rs  workspace.rs  worktree.rs
crates/cuartel-core/: Cargo.toml
crates/cuartel-core/src/: agent.rs  auth_gateway.rs  availability.rs  checkpoint.rs  config.rs  credential_store.rs  cron.rs  diff_render.rs  file_passing.rs  firewall.rs  fork.rs  lib.rs  onboarding.rs  overlay.rs  pipeline.rs  review.rs  session.rs  sqlite_credential_store.rs  workflow.rs  workspace.rs  workspace_mount.rs
crates/cuartel-core/src/auth_gateway/: audit.rs  firewall.rs  host.rs  mod.rs  persister.rs  proxy.rs  rules.rs
crates/cuartel-db/: Cargo.toml
crates/cuartel-db/src/: audit.rs  checkpoints.rs  credentials.rs  crypto.rs  lib.rs  port_forwards.rs  schema.rs  servers.rs  sessions.rs  workspaces.rs
crates/cuartel-remote/: Cargo.toml
crates/cuartel-remote/src/: lib.rs  registry.rs  server.rs  sync.rs  tailscale.rs
crates/cuartel-rivet/: Cargo.toml
crates/cuartel-rivet/src/: checkpoints.rs  client.rs  event_decode.rs  events.rs  filesystem.rs  lib.rs  network.rs  session.rs  sidecar.rs  vm.rs  workflow.rs
crates/cuartel-terminal/: Cargo.toml
crates/cuartel-terminal/src/: grid.rs  lib.rs  pty.rs  renderer.rs  terminal.rs
rivet/: package-lock.json  package.json  server.ts
scripts/: package.sh
spike/A1-localsandbox/: A1-FINDINGS.md  README.md  package-lock.json  package.json  tsconfig.json
spike/A1-localsandbox/src/: acp-client.ts  protocol.ts  run-50x.ts  run-once.ts  test-load-session.ts
