[package]
name = "cuartel-acp"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
agent-client-protocol = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
futures = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
log = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
tempfile = "3"
