[package]
name = "cuartel-core"
version.workspace = true
edition.workspace = true

[dependencies]
cuartel-db = { workspace = true }
cuartel-rivet = { workspace = true }
similar = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
log = { workspace = true }
tokio = { workspace = true }
dirs = { workspace = true }
async-trait = { workspace = true }
keyring = { workspace = true }

[dev-dependencies]
tempfile = "3"
