[package]
name = "cuartel-db"
version.workspace = true
edition.workspace = true

[dependencies]
rusqlite = { workspace = true }
aes-gcm = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
dirs = { workspace = true }
log = { workspace = true }
rand = "0.8"
